--- a/index.adoc
+++ b/index.adoc
@@ -30,6 +30,7 @@ services primarily for the EU region, and remotely.
 
 Latest posts from my low-frequency Clojure related blog:
 
+* http://blog.wagjo.com/markov.html[Markov Text Generator in Dunaj]
 * http://blog.wagjo.com/set.html[Universal and Complement Sets in Dunaj]
 
 == Open Source Projects
