--- a/consulting.adoc
+++ b/consulting.adoc
@@ -1,9 +1,9 @@
 = Consulting services
 :icons: font
 
-Hi, I'm http://www.wagjo.com[Jozef Wagner], an independent contractor
-and a software developer. This page focuses on technical aspects of my
-services and is quite technology heavy.
+Hi, I'm http://www.wagjo.com[Jozef Wagner], an independent contractor,
+business consultant and a software developer. This page focuses on
+technical aspects of my services and is quite technology heavy.
 Please see <<index.ad#,my homepage>> for more general and business
 related information about my consulting services.
 
@@ -17,35 +17,42 @@ hand, while keeping the result practical and efficient.
 
 == Technical proficiency
 
-I've started programming as a kid and went through BASIC, Pascal, and
-writing programs for microcontrollers in an assembly language.
-I have more than 10 years of professional experience with languages
-such as Java, C#, C++ and C. 
+I've started programming as a kid, hacking BASIC on ZX Spectrum,
+Pascal under DOS, and have written programs for microcontrollers and
+PLCs in assembly languages. I've started my professional carreer
+more than 10 years ago and I have a strong professional experience
+with Clojure, Java, C#, C++ and C.
+
+I've implemented and delivered software for several multinational EU
+funded projects. I was involved in backend and middleware services
+that handle large amount of data, perform sentiments analysis, data
+aggregation, event stream processing, process and pattern discovery,
+and other data mining tasks.
+
+I've worked with multiple kind of databases such as
+traditional SQL ones, graph databases like Neo4j, custom semantically
+oriented databases that used SPARQL, infamous NoSQL databases like
+MongoDB and with search oriented data engines such as Elasticsearch.
 
 I have a PhD. in Artificial Intelligence and I've hacked on a couple
 of AI related applications in C/C++, Common Lisp and Prolog, ranging
 from neural networks with backprop, perceptrons, expert systems,
 to scheduling and logistic algorithms.
 
-I've implemented and delivered software backend and middleware
-services for several multinational EU funded projects.
 I'm also experienced in a low-level programming and communication
 with industrial electronic devices. I've designed and developed
-software solutions for the medical and electrochemical industry.
-
-I've worked with multiple kind of databases like
-traditional SQL ones, graph databases like Neo4j, custom semantically
-oriented databases that used SPARQL, infamous NoSQL databases like
-MongoDB and also with search oriented data engines like Elasticsearch.
+software solutions for the medical and electrochemical industry,
+directly communicating with respective stakeholders and solving their
+business problems.
 
 I'm skilled in full stack web development and related technologies.
-Besides contemporary hip web languages, I've also went
-through a dark age of WS-*, SOAP, XSLT and other XML related
-technologies. I also did a couple of DevOps related stuff on 
-multiple occasions.
+Besides contemporary hip web languages and libraries, I'm not afraid
+to code in modern Javascript. I've also went through a dark age of
+WS-*, JSP, SOAP, XSLT and other XML related technologies. I also did a
+couple of DevOps related stuff on multiple occasions.
 
-I'm a very big fan of a Clojure language and I'm an active contributor
-to the language and its surrounding ecosystem.
+I'm a big fan of a Clojure and ClojureScript languages and I'm an
+active contributor to the language and its surrounding ecosystem.
 I'm active in the
 <<index.ad#_open_source_projects,Open Source community>> and I'm
 running a low frequency http://blog.wagjo.com[Clojure oriented blog].
